<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_fr3_duo_joint_trajectory_controller</name>
  <version>0.1.0</version>
  <description>
     Adaptation of the JointTrajectoryController to account for a mix of Cartesian velocity control for the mobile base and Joint Commands (Position/Effort) for the arms.
  </description>
  <maintainer email="support@franka.de">Franka Robotics GmbH</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/moveit/moveit2/issues</url>
  <url type="repository">https://github.com/moveit/moveit2</url>

  <author email="support@franka.de">Franka Robotics GmbH</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>trajectory_msgs</depend>
  <depend>generate_parameter_library</depend>
  <depend>franka_semantic_components</depend>
  <depend>franka_example_controllers</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
